--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lady Acadia</title>
   </head>
   <body>
-    <div id="app" class=" text-Anthracite bg-blue-100 min-h-screen"></div>
+    <div id="app" class=" text-Anthracite bg-blue-100 "></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
