modif logo et illustration petit ecran

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/IMG_1128.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lady Acadia</title>
+
   </head>
   <body>
     <div id="app" class=" text-Anthracite bg-blue-100 "></div>
